[tool.poetry]
name = "repl_python3_Brehhh"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
concatenate = "^0.1.2"
discord = "^1.7.3"
jishaku = "^2.5.1"
requests = "^2.28.1"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
